<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="40dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/plant_type_1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/plant_type_1"/>

    <TextView
        android:id="@+id/plant_type_2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/plant_type_2"/>
    <TextView
        android:id="@+id/plant_type_3"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/plant_type_3"/>
    <TextView
        android:id="@+id/plant_type_4"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/plant_type_4"/>
    <TextView
        android:id="@+id/plant_type_5"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/plant_type_5"/>
    <TextView
        android:id="@+id/plant_type_6"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/plant_type_6"/>
    <TextView
        android:id="@+id/plant_type_7"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/plant_type_7"/>
    <TextView
        android:id="@+id/plant_type_8"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/plant_type_8"/>
    <TextView
        android:id="@+id/plant_type_9"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/plant_type_9"/>
    <TextView
        android:id="@+id/plant_type_10"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/plant_type_10"/>

</LinearLayout>