<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="#313234"
        android:textSize="20sp" />

    <View
        android:id="@+id/view_line"
        android:layout_width="370dp"
        android:layout_height="1.2dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:background="#616161" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/logo" />

    //아이디 입력
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="370dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        app:boxBackgroundColor="#e9ecef">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_id"
            android:layout_width="370dp"
            android:layout_height="60dp"
            android:hint="@string/id"
            android:textColorHint="#616161"
            android:textSize="6pt">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    //패스워드 입력
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="370dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:hint="@string/password"
        android:layout_marginBottom="20dp"
        app:boxBackgroundColor="#e9ecef">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_pw"
            android:layout_width="370dp"
            android:layout_height="60dp"
            android:textColorHint="#616161"
            android:inputType="textPassword"
            android:textSize="6pt">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_login"
        android:layout_width="370dp"
        android:layout_height="60dp"
        android:text="@string/login"
        android:textSize="17sp"
        app:backgroundTint="#54C159" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:weightSum="10">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="5"
            android:text="@string/not_member"/>
        <TextView
            android:id="@+id/member1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="5"
            android:onClick="member1"
            android:textColor="#0070C0"
            android:text="@string/member"
            tools:ignore="OnClick" />

    </LinearLayout>

</LinearLayout>